--- a/README.html
+++ b/README.html
@@ -178,6 +178,7 @@ pre code {
 <p>This was a Genetics Society funded internship hosted by the Professor Tracey Chapman lab at University of East Anglia (UEA) Summer 2022.</p>
 <p>The aim of this project was to investigate the effect of altered protein:carbohydrate ratios in adult diets on lifespan in male and female <em>Drosophila melanogaster</em>.</p>
 <p>knitr::include_graphics(“images/flypic.jpg”)</p>
+<p>knitr::include_graphics(here(“images”, “flypic.jpg”))</p>
 </div>
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
