Edited the README include explanation of data files.

--- a/README.html
+++ b/README.html
@@ -182,7 +182,7 @@ pre code {
 </div>
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
-<p>EggCountingE1.csv An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1</p>
+<p>EggCountingE1.csv An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
 </div>
 <div id="descriptions-of-analysis-files" class="section level2">
 <h2>Descriptions of analysis files</h2>
