Updated the README with a description of the data files.

--- a/README.html
+++ b/README.html
@@ -183,6 +183,14 @@ pre code {
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
 <p>EggCountingE1.csv An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
+<p>FemaleNotFeedingE1.csv An excel document containing the amount of female flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>MaleNotFeedingE1.csv An excel document containing the amount of male flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>MatedFemalesE1D1.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
+<p>MatedFemalesE1D2.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
+<p>MatedMalesE1D1.xlsx An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
+<p>MatedMalesE1D2.xlsx An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
+<p>MatedEggCountE2a.xlsx An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the mated females plates.</p>
+<p>VirginEggCountE2a.xlsx An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the virgin females plates.</p>
 </div>
 <div id="descriptions-of-analysis-files" class="section level2">
 <h2>Descriptions of analysis files</h2>
