Changing the data file descriptions.

--- a/README.html
+++ b/README.html
@@ -177,14 +177,13 @@ pre code {
 <h2>Project Aims</h2>
 <p>This was a Genetics Society funded internship hosted by the Professor Tracey Chapman lab at University of East Anglia (UEA) Summer 2022.</p>
 <p>The aim of this project was to investigate the effect of altered protein:carbohydrate ratios in adult diets on lifespan in male and female <em>Drosophila melanogaster</em>.</p>
-<p>knitr::include_graphics(“images/flypic.jpg”)</p>
-<p>knitr::include_graphics(here(“images”, “flypic.jpg”))</p>
+<p>This projected investigated the divergent diet choices of <em>drosophila melanogaster</em>, and looked more specifically at how males chose compared to females, how mated females chose compared to virgin females, and also if choice differed if females were placed in plates with males versus if they were in plates alone.</p>
 </div>
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
-<p>EggCountingE1.csv An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
-<p>FemaleNotFeedingE1.csv An excel document containing the amount of female flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
-<p>MaleNotFeedingE1.csv An excel document containing the amount of male flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>EggCountingE1.csv: An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
+<p>FemaleNotFeedingE1.csv: An excel document containing the amount of female flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>MaleNotFeedingE1.: An excel document containing the amount of male flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
 <p>MatedFemalesE1D1.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
 <p>MatedFemalesE1D2.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
 <p>MatedMalesE1D1.xlsx An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
