Updated the description of data files on the README.

--- a/README.html
+++ b/README.html
@@ -181,15 +181,45 @@ pre code {
 </div>
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
-<p>EggCountingE1.csv: An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
-<p>FemaleNotFeedingE1.csv: An excel document containing the amount of female flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
-<p>MaleNotFeedingE1.: An excel document containing the amount of male flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
-<p>MatedFemalesE1D1.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
-<p>MatedFemalesE1D2.xlsx An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
-<p>MatedMalesE1D1.xlsx An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
-<p>MatedMalesE1D2.xlsx An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
-<p>MatedEggCountE2a.xlsx An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the mated females plates.</p>
-<p>VirginEggCountE2a.xlsx An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the virgin females plates.</p>
+<div id="experiment-1" class="section level4">
+<h4>Experiment 1</h4>
+<p>EggCountingDataExp1.xlsx: An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 1.</p>
+<p>FemaleNotFeedingExp1.xlsx: An excel document containing the amount of female flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>MalesNotFeedingExp1.xlsx: An excel document containing the amount of male flies that weren’t on any of the 4 different protein:carbohydrate ratios, and instead were around the plate, from experiment 1.</p>
+<p>MatedFemalesE1D1.xlsx: An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
+<p>MatedFemalesE1D2.xlsx: An excel document containing the amount of female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
+<p>MatedMalesE1D1.xlsx: An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 1.</p>
+<p>MatedMalesE1D2.xlsx: An excel document containing the amount of male flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 1.</p>
+</div>
+<div id="experiment-2a" class="section level4">
+<h4>Experiment 2a</h4>
+<p>MatedEggCountE2a.xlsx: An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the mated females plates.</p>
+<p>VirginEggCountE2a.xlsx: An excel document containing the egg counts for the 4 different protein:carbohydrate ratios taken from experiment 2a from the virgin females plates.</p>
+<p>MatedFemalesE2aD1.xlsx: An excel document containing the amount of mated female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 2a.</p>
+<p>MatedFemalesE2aD2.xlsx: An excel document containing the amount of mated female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 2a.</p>
+<p>MatedFemalesE2aD3.xlsx: An excel document containing the amount of mated female flies that were on any of the 4 different protein:carbohydrate ratios from day 3 observations from experiment 2a.</p>
+<p>VirginFemalesE2aD1.xlsx: An excel document containing the amount of virgin female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 2a.</p>
+<p>VirginFemalesE2aD2.xlsx: An excel document containing the amount of virgin female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 2a.</p>
+<p>VirginFemalesE2aD3.xlsx: An excel document containing the amount of virgin female flies that were on any of the 4 different protein:carbohydrate ratios from day 3 observations from experiment 2a.</p>
+</div>
+<div id="experiment-2b" class="section level4">
+<h4>Experiment 2b</h4>
+<p>MatedFemalesE2bD1.xlsx: An excel document containing the amount of mated female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 2b.</p>
+<p>MatedFemalesE2bD2.xlsx: An excel document containing the amount of mated female flies that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 2b.</p>
+<p>VirginFemalesE2bD1.xlsx: An excel document containing the amount of virgin female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 2b.</p>
+<p>VirginFemalesE2bD2.xlsx: An excel document containing the amount of virgin female flies that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 2b.</p>
+</div>
+<div id="experiment-3" class="section level4">
+<h4>Experiment 3</h4>
+<p>Exp3OffspringAlone.xlsx An excel document containing the offspring counts from the 4x P:C food patches when females were alone on a plate.</p>
+<p>Exp3OffspringBoth.xlsx An excel document containing the offspring counts from the 4x P:C food patches when females were with males on a plate.</p>
+<p>MatedFemalesE3D1.xlsx: An excel document containing the amount of mated female flies on a plate alone that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 3.</p>
+<p>MatedFemalesE3D2.xlsx: An excel document containing the amount of mated female flies on a plate alone that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 3.</p>
+<p>MatedMalesE3D1(M+F).xlsx: An excel document containing the amount of male flies on a plate with females that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 3.</p>
+<p>MatedMalesE3D2(M+F).xlsx: An excel document containing the amount of male flies on a plate with females that were on any of the 4 different protein:carbohydrate ratios from day 2 observations from experiment 3.</p>
+<p>MatedFemalesE3D1(M+F).xlsx: An excel document containing the amount of mated female flies on a plate with males that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 3.</p>
+<p>MatedFemalesE3D2(M+F).xlsx: An excel document containing the amount of mated female flies on a plate with males that were on any of the 4 different protein:carbohydrate ratios from day 1 observations from experiment 3.</p>
+</div>
 </div>
 <div id="descriptions-of-analysis-files" class="section level2">
 <h2>Descriptions of analysis files</h2>
