Updated the description of analysis files.

--- a/README.html
+++ b/README.html
@@ -224,10 +224,22 @@ pre code {
 <div id="descriptions-of-analysis-files" class="section level2">
 <h2>Descriptions of analysis files</h2>
 <p>Data: including plots, statistical tests.. for</p>
-<p>Experiment 1: An experiment looking at Mated females feeding behaviour vs Mated males feeding behaviour</p>
-<p>Experiment 2a</p>
-<p>Experiment 2b</p>
-<p>Experiment 3</p>
+<div id="experiment-1-1" class="section level4">
+<h4>Experiment 1</h4>
+<p>An experiment looking at the feeding behaviour of mated males compared with the feeding behaviour of mated females over the course of 2 days when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where females chose to lay the eggs.</p>
+</div>
+<div id="experiment-2a-1" class="section level4">
+<h4>Experiment 2a</h4>
+<p>An experiment looking at the feeding behaviour of mated females compared with the feeding behaviour of virgin females over the course of 3 days, when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where the different types of females chose to lay the eggs.</p>
+</div>
+<div id="experiment-2b-1" class="section level4">
+<h4>Experiment 2b:</h4>
+<p>A repear of the experiment looking at the feeding behaviour of mated females compared with the feeding behaviour of virgin females, completed over the course of 2 days, when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where the different types of females chose to lay the eggs.</p>
+</div>
+<div id="experiment-3-1" class="section level4">
+<h4>Experiment 3:</h4>
+<p>An experiment looking at the feeding behaviour of n=10 females on a replicate of plates compared with n=5 females mixed with n=5 males on a plate. Feeding behaviour is monitored from 4x different P:C ratios. This experiment also includes analysis of the offspring produced from egg laying on the 4x different P:C ratios.</p>
+</div>
 </div>
 </div>
 
