Updated the description of data analysis files on the README.

--- a/README.html
+++ b/README.html
@@ -223,7 +223,8 @@ pre code {
 </div>
 <div id="descriptions-of-analysis-files" class="section level2">
 <h2>Descriptions of analysis files</h2>
-<p>Data: including plots, statistical tests.. for</p>
+<div id="data-analysis-including-data-visualisation-and-statistical-tests-for-the-different-experiments." class="section level3">
+<h3>Data analysis, including data visualisation and statistical tests for the different experiments.</h3>
 <div id="experiment-1-1" class="section level4">
 <h4>Experiment 1</h4>
 <p>An experiment looking at the feeding behaviour of mated males compared with the feeding behaviour of mated females over the course of 2 days when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where females chose to lay the eggs.</p>
@@ -233,12 +234,13 @@ pre code {
 <p>An experiment looking at the feeding behaviour of mated females compared with the feeding behaviour of virgin females over the course of 3 days, when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where the different types of females chose to lay the eggs.</p>
 </div>
 <div id="experiment-2b-1" class="section level4">
-<h4>Experiment 2b:</h4>
+<h4>Experiment 2b</h4>
 <p>A repear of the experiment looking at the feeding behaviour of mated females compared with the feeding behaviour of virgin females, completed over the course of 2 days, when given the choice of 4x altered P:C ratios. This experiment also looks into diet choice of where the different types of females chose to lay the eggs.</p>
 </div>
 <div id="experiment-3-1" class="section level4">
-<h4>Experiment 3:</h4>
+<h4>Experiment 3</h4>
 <p>An experiment looking at the feeding behaviour of n=10 females on a replicate of plates compared with n=5 females mixed with n=5 males on a plate. Feeding behaviour is monitored from 4x different P:C ratios. This experiment also includes analysis of the offspring produced from egg laying on the 4x different P:C ratios.</p>
+</div>
 </div>
 </div>
 </div>
