--- a/README.html
+++ b/README.html
@@ -178,6 +178,7 @@ pre code {
 <p>This was a Genetics Society funded internship hosted by the Professor Tracey Chapman lab at University of East Anglia (UEA) Summer 2022.</p>
 <p>The aim of this project was to investigate the effect of altered protein:carbohydrate ratios in adult diets on lifespan in male and female <em>Drosophila melanogaster</em>.</p>
 <p>This projected investigated the divergent diet choices of <em>drosophila melanogaster</em>, and looked more specifically at how males chose compared to females, how mated females chose compared to virgin females, and also if choice differed if females were placed in plates with males versus if they were in plates alone.</p>
+<p>&lt;img title=“a title” alt=“Alt text” src=“/images/flypic.jpg”, width = 200&gt;</p>
 </div>
 <div id="descriptions-of-data-files" class="section level2">
 <h2>Descriptions of data files</h2>
